<resources>
    <string name="app_name">POSCYD</string>
    <string name="temperature">"Temperature: "</string>
    <string name="feels_like">"Feels Like: "</string>
    <string name="fuzzy_temperature">Fuzzy temperature: </string>
    <string name="recommended_clothing">Recommended clothing </string>
    <string name="and">and</string>
    <string name="frigid">frigid</string>
    <string name="freezing">freezing</string>
    <string name="cold">cold</string>
    <string name="cool">cool</string>
    <string name="mild">mild</string>
    <string name="warm">warm</string>
    <string name="hot">hot</string>
    <string name="sweltering">sweltering</string>
    <string name="jacket">jacket</string>
    <string name="mittens">mittens</string>
    <string name="scarf">scarf</string>
    <string name="socks">socks</string>
    <string name="warm_hat">warm hat</string>
    <string name="thick_pants">thick pants</string>
    <string name="jeans">jeans</string>
    <string name="shorts">shorts</string>
    <string name="t_shirt">t-shirt</string>
    <string name="consider">consider</string>
    <string name="str_temperature_introduction">The temperature today is</string>
    <string name="str_raining_introduction">Since it is raining consider to take an umbrella or a raincoat with you.</string>
    <string name="str_sunny_introduction">Since it is pretty sunny outside consider to bring sunglasses or a cap with you.</string>
    <string name="str_warning">It is recommended not to go outside.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="location_header_settings">Location</string>

    <!-- Messages Preferences -->
    <string name="location_name_title">Location name</string>

    <!-- Sync Preferences -->
    <string name="manual_location_title">Use manual location</string>
    <string name="manual_location_summary_on">Use manually input location</string>
    <string name="manual_location_summary_off">Use GPS based location</string>

    <!-- sensitivity preferences -->
    <string name="heat_resistant">Heat resistant</string>
    <string name="cold_resistant">Cold resistant</string>
    <string name="viking">Viking</string>
    <string name="weather_icon_content_description">Weather Icon</string>
    <string name="sensitivity_preference_title">Sensitivity Preference</string>

</resources>