<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location_header_settings">

        <SwitchPreferenceCompat
            app:dependency="location_name"
            app:key="manual_location"
            app:summaryOff="@string/manual_location_summary_off"
            app:summaryOn="@string/manual_location_summary_on"
            app:title="@string/manual_location_title" />
        <EditTextPreference
            app:key="location_name"
            app:title="@string/location_name_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <ListPreference
        android:defaultValue="cold_resistant"
        android:entries="@array/weather_mode_entries"
        android:entryValues="@array/weather_mode_value"
        android:key="temperature_sensitivity"
        android:summary="%s"
        android:title="@string/sensitivity_preference_title" />


</PreferenceScreen>